--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Caluclator Basic</title>
     <script src="./myScript.js"></script>
     <link rel="stylesheet" href="myStyle.css">
 </head>
